# xc

./: .gitignore  CMakeLists.txt  LICENSE  build.bat  main.cpp  readme
grx/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Framebuffer.cpp  Framebuffer.h  PipelineLayout.cpp  PipelineLayout.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  SkinningPipeline.cpp  SkinningPipeline.h  SyncObjects.cpp  SyncObjects.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  grx.cpp  grx.h  mesh.h  render_data.h
model/: model.cpp  model.h  model_and_instance_data.h
surface/: icon.rc  resource.h  surface.cpp  surface.h
tools/: Tools.cpp  Tools.h
